--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -163,7 +163,7 @@
                         {% if att.invigilationStatus %}
                             <span class="status frame-completed">ACCEPTED</span>
                         {% else %}
-                            <em class="status frame-pending">PENDING</em>
+                            <span class="status frame-pending">PENDING</span>
                         {% endif %}
                     </td>
                 </tr>
