--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -16,7 +16,7 @@
     </div>
     <div id="noResults" style="display: none; text-align: center; margin-top: 10px; font-weight: bold; color: #b00;">No results found.</div>
 
-    <form method="get" style="display:flex; align-items:center; gap:8px;">
+    <form method="get" style="display:flex; align-items:center; gap:8px; width:50%; margin-top: 1%;">
         <label for="lecturer">Select_Lecturer:</label>
         <select name="lecturer" id="lecturer" onchange="this.form.submit()">
             <option value="">All Lecturers</option>
@@ -33,7 +33,7 @@
             </button>
         {% endif %}
     </form>
-    
+
     <br><div id="dayLegend" style="display:flex;gap:15px;align-items:center;"></div>
     <div class="user-table-container">
         <table class="user-data-table" id="mergeTimetable" border="1">
