--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -39,7 +39,7 @@
             width: 60%;
             padding: 8px;
             font-size: 16px;
-            margin-top: 1%;
+            margin: 1%;
         }
         #status-message {
             margin-top: 15px;
