--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -79,6 +79,7 @@
         <table id="attendance-table" class="hidden">
             <thead>
                 <tr>
+                    <th>Course Details</th>
                     <th>Exam Details</th>
                     <th>Attendance Record</th>
                     <th>Attendance Remark</th>
@@ -140,7 +141,9 @@
                             <td>
                                 <strong>Course:</strong> ${d.courseName}<br>
                                 <strong>Code/Section:</strong> ${d.courseCode}<br>
-                                <strong>Students:</strong> ${d.students}<br>
+                                <strong>Students:</strong> ${d.students}
+                            </td>
+                            <td>
                                 <strong>Exam Start:</strong> ${d.examStart}<br>
                                 <strong>Exam End:</strong> ${d.examEnd}<br>
                                 <strong>Exam Venue:</strong> ${d.examVenue}
