--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -79,15 +79,15 @@
 <div class="dashboard-row" style="grid-template-columns: repeat(3, 1fr);">
     <div class="dashboard-frame">
         <h3>Actual Invigilation Hours</h3>
-        <p class="dashboard-text" style="color:green;">{{ user_invigilationHour }}</p>
+        <p class="dashboard-text" style="color:green;">{{ user_invigilationHour|hours_format }}</p>
     </div>
     <div class="dashboard-frame">
         <h3>Estimated Invigilation Hours</h3>
-        <p class="dashboard-text" style="color:blue;">{{ user_invigilationHour +  user_pendingInvigilationHour}}</p>
+        <p class="dashboard-text" style="color:blue;">{{ (user_invigilationHour + user_pendingInvigilationHour)|hours_format}}</p>
     </div>
     <div class="dashboard-frame">
         <h3>Pending Invigilation Hours</h3>
-        <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour }}</p>
+        <p class="dashboard-text" style="color:blueviolet;">{{ user_pendingInvigilationHour|hours_format }}</p>
     </div>
 </div><br>
 
